docs: 문서 구조 개선 및 설정 정리
- Week 1 관련 문서를 docs/guides 디렉토리로 재구성
- 문서 전체에서 이모지 제거 및 문체 통일 (~합니다 형식)
- ADR 목록을 번호순으로 재정렬하여 가독성 향상
- Kustomize solid-cloud 오버레이 환경 변수 추가
- Token 기반 K8s 인증 관련 스크립트 개선

--- a/terraform/environments/solid-cloud/terraform.tfvars.example
+++ b/terraform/environments/solid-cloud/terraform.tfvars.example
@@ -16,10 +16,12 @@ postgres_version      = "15-alpine"
 postgres_storage_size = "10Gi"
 postgres_password     = "CHANGE_THIS_SECURE_PASSWORD"  # ⚠️ Update with strong password
 
-# Kubernetes Provider Configuration
-kubeconfig_path = "~/.kube/config"  # Path to your kubeconfig file
+# Kubernetes Provider Configuration (optional overrides)
+# Provide when you want Terraform to use a specific kubeconfig file.
+# Otherwise, the default ~/.kube/config is used.
+# kubeconfig_path = "/absolute/path/to/kubeconfig"
 
-# Or use explicit configuration (comment out kubeconfig_path if using this)
+# Or use explicit configuration (set all four values if not using config_path)
 # kubernetes_host                   = "https://solid-cloud-k8s-endpoint"
 # kubernetes_client_certificate     = "base64-encoded-cert"
 # kubernetes_client_key             = "base64-encoded-key"
