--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -11,8 +11,6 @@ namePrefix: prod-
 resources:
   - ../../base
   - namespace.yaml
-  - configmap-patch.yaml
-  - secret-patch.yaml
 
 # Patches for Solid Cloud environment
 patches:
@@ -39,23 +37,43 @@ configMapGenerator:
   - name: app-config
     behavior: merge
     literals:
-      - ENVIRONMENT=production
+      - USE_POSTGRES=true
       - POSTGRES_HOST=postgresql-service
       - POSTGRES_PORT=5432
       - POSTGRES_DB=titanium
+      - API_GATEWAY_URL=http://prod-api-gateway-service:8000
+      - USER_SERVICE_URL=http://prod-user-service:8001
+      - AUTH_SERVICE_URL=http://prod-auth-service:8002
+      - BLOG_SERVICE_URL=http://prod-blog-service:8005
+      - DASHBOARD_UI_URL=http://prod-dashboard-ui-service:80
+      - LOAD_BALANCER_URL=http://prod-load-balancer-service:7100
+      - REDIS_HOST=prod-redis-service
+      - REDIS_PORT=6379
+      - REDIS_DB=0
+      - ENVIRONMENT=production
+      - LOG_LEVEL=INFO
+      - DEBUG_MODE=false
+      - APP_NAME=titanium
+      - APP_VERSION=2.0.0
+      - CORS_ALLOWED_ORIGINS=*
 
 # Secret generator (will be replaced by actual secrets)
 # Note: In production, manage secrets separately or use external secret managers
 secretGenerator:
   - name: app-secrets
     behavior: merge
-    # Secrets will be managed via separate secret-patch.yaml
+    literals:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=CHANGE_THIS_SECURE_PASSWORD
+      - JWT_SECRET_KEY=CHANGE_THIS_JWT_SECRET
+      - INTERNAL_API_SECRET=CHANGE_THIS_API_SECRET
 
 # Common labels for all resources
-commonLabels:
-  environment: production
-  managed-by: kustomize
-  project: titanium
+labels:
+  - pairs:
+      environment: production
+      managed-by: kustomize
+      project: titanium
 
 # Images to use (update with actual registry)
 images:
