feat: CI/CD 파이프라인 구축 및 Docker 이미지 배포
Phase 1 완료:
- Docker Hub에 멀티 플랫폼 이미지 빌드 및 배포 (v1.0)
- K8s manifests 업데이트 (dongju101/*-service:v1.0)
- INTERNAL_API_SECRET 보안 강화
- E2E 테스트 완료 (회원가입, 로그인, 게시글 CRUD)

Phase 2 완료:
- GitHub Actions CI 워크플로우 구현
- 서비스별 변경 감지 및 선택적 빌드
- Trivy 보안 스캔 통합 (CRITICAL, HIGH 취약점)
- Docker Hub 자동 푸시 (main 브랜치)
- CI/CD 설정 가이드 문서화

Related: #10, #11

--- a/k8s-manifests/base/api-gateway-deployment.yaml
+++ b/k8s-manifests/base/api-gateway-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: api-gateway-container
-        image: dongju101/titanium-api:latest
+        image: dongju101/api-gateway:v1.0
         imagePullPolicy: Always
         ports:
         - containerPort: 8000
