--- a/k8s-manifests/base/dashboard-ui-deployment.yaml
+++ b/k8s-manifests/base/dashboard-ui-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: dashboard-ui-container
-        image: dongju101/titanium-ui:latest
+        image: dongju101/dashboard-ui:v1.0
         imagePullPolicy: Always
         ports:
         - containerPort: 80
