--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -66,7 +66,7 @@ secretGenerator:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=CHANGE_THIS_SECURE_PASSWORD
       - JWT_SECRET_KEY=CHANGE_THIS_JWT_SECRET
-      - INTERNAL_API_SECRET=CHANGE_THIS_API_SECRET
+      - INTERNAL_API_SECRET=EXNOz8PzwtGzCFUFtaSR/MAKcijj39DBTImiaMbi3xA=
 
 # Common labels for all resources
 labels:
@@ -75,16 +75,21 @@ labels:
       managed-by: kustomize
       project: titanium
 
-# Images to use (update with actual registry)
+# Images to use (updated with Docker Hub registry)
 images:
-  - name: dongju101/titanium-user-service
-    newTag: latest
-  - name: dongju101/titanium-blog-service
-    newTag: latest
-  - name: dongju101/titanium-auth-service
-    newTag: latest
-  - name: dongju101/titanium-api-gateway
-    newTag: latest
+  - name: dongju101/user-service
+    newTag: v1.0
+  - name: dongju101/blog-service
+    newTag: v1.0
+  - name: dongju101/auth-service
+    newTag: v1.0
+  - name: dongju101/api-gateway
+    newTag: v1.0
+  - name: dongju101/load-balancer
+    newTag: v1.0
+  - name: dongju101/dashboard-ui
+    newTag: v1.0
+
 
 # Resource modifications
 replicas:
