feat: GitOps with Argo CD 구축 완료
Phase 3 완료:
- Argo CD 설치 및 구성
  - NodePort로 UI 노출 (HTTPS: 30547, HTTP: 31619)
  - 초기 admin 계정 설정

- Argo CD Application 생성
  - Titanium 프로젝트를 위한 Application manifest
  - 자동 동기화 및 self-heal 설정
  - Kustomize를 사용한 배포

- CD Pipeline 구현
  - CI 완료 후 자동으로 manifest 업데이트
  - 이미지 태그를 main-{short-sha}로 자동 변경
  - Argo CD가 변경사항을 감지하여 자동 배포

- CI Pipeline 개선
  - 이미지 태그 전략 통일 (main-{short-sha}, latest)

- 문서화
  - GitOps 및 Argo CD 설정 가이드
  - 롤백 프로시저
  - 트러블슈팅 가이드

Related: #12, #13, #14

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
           images: ${{ env.DOCKER_HUB_USERNAME }}/${{ matrix.service }}
           tags: |
             type=ref,event=pr
-            type=sha,prefix={{branch}}-
+            type=sha,prefix=main-,format=short
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build Docker image (PR)
