fix: PR 빌드 시 멀티 플랫폼 이슈 해결
문제: PR 빌드에서 load=true와 멀티 플랫폼 빌드를 동시에 사용 불가
해결: PR 빌드는 linux/amd64만 빌드, main 브랜치는 멀티 플랫폼 유지

- PR: linux/amd64만 빌드하여 Trivy 스캔
- Main: linux/amd64,linux/arm64 멀티 플랫폼 빌드 및 푸시

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./${{ matrix.service }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: false
           load: true
           tags: ${{ env.DOCKER_HUB_USERNAME }}/${{ matrix.service }}:test
