fix: GitHub Actions 권한 추가 및 PR 코멘트 오류 처리
- workflow에 필요한 권한 추가 (pull-requests: write, issues: write)
- PR 코멘트 단계에 continue-on-error 추가
- 코멘트 실패 시에도 workflow가 성공으로 완료되도록 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ on:
       - 'dashboard-ui/**'
       - '.github/workflows/ci.yml'
 
+permissions:
+  contents: read
+  security-events: write
+  pull-requests: write
+  issues: write
+
 env:
   DOCKER_HUB_USERNAME: dongju101
   REGISTRY: docker.io
@@ -143,6 +149,7 @@ jobs:
 
       - name: Comment PR with Trivy results
         if: github.event_name == 'pull_request'
+        continue-on-error: true
         uses: actions/github-script@v7
         with:
           script: |
