fix: CI/CD 및 대시보드 연결 문제 해결
PR #35 머지 후 발생한 3가지 주요 이슈를 해결합니다:

1. GitHub Actions CI 실패
   - 원인: DOCKER_HUB_TOKEN secret이 저장소에 설정되지 않음
   - 분석: Docker login 단계에서 "Password required" 오류 발생
   - 해결 방법: docs/guides/ci-cd-setup.md 가이드에 따라
     GitHub Secrets에 DOCKER_HUB_TOKEN 추가 필요

2. 대시보드 연결 끊김 오류
   - 원인: dashboard-ui 서비스가 ClusterIP로 외부 접근 불가
   - 문제: 사용자가 대시보드 대신 load-balancer 포트 31193에 접근
   - 해결: dashboard-ui 서비스를 NodePort로 변경 (포트 31194)
   - 변경사항:
     * patches/dashboard-ui-service-patch.yaml 생성
     * kustomization.yaml에 패치 적용
     * 대시보드 접근 주소: http://10.0.11.168:31194

3. Issue 자동 닫힘 실패
   - 원인: PR #35에서 "Closes #10, #11, #12, #13, #14" 형식 사용
   - 문제: GitHub은 쉼표로 구분된 형식에서 첫 번째 issue(#10)만 자동 닫음
   - 해결: issues #11-14를 PR #35 참조와 함께 수동으로 닫음
   - 참고: 향후 PR에서는 각 issue마다 별도의 "Closes #X" 문구 사용 필요

테스트 결과:
- 대시보드 서비스가 NodePort(포트 31194)로 성공적으로 변경됨
- 서비스 업데이트 후 모든 Kubernetes 파드가 정상 상태 유지
- Issues #11-14가 PR 참조와 함께 성공적으로 닫힘

Related Issues: #10, #11, #12, #13, #14

--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -20,6 +20,12 @@ patches:
       kind: Service
       name: load-balancer-service
 
+  # Expose dashboard-ui service as NodePort for external access
+  - path: patches/dashboard-ui-service-patch.yaml
+    target:
+      kind: Service
+      name: dashboard-ui-service
+
   # Remove SQLite PVC from user-service deployment
   - path: patches/user-service-deployment-patch.yaml
     target:
