fix: 대시보드 API 연결을 위한 nginx 프록시 설정 추가
대시보드에서 Backend communication error가 발생하는 문제를 해결합니다.

문제 원인:
- 대시보드가 NodePort(31194)로 접근 가능하게 변경되었으나,
  nginx가 정적 파일만 서빙하여 /stats API 접근 불가
- 대시보드 script.js가 같은 호스트의 /stats 엔드포인트에 요청하지만
  해당 경로가 존재하지 않음

해결 방법:
- nginx ConfigMap 생성하여 API 프록시 설정 추가
- /stats → prod-load-balancer-service:7100/stats
- /api/* → prod-api-gateway-service:8000/api/*
- /api/ws-heartbeat → prod-load-balancer-service:7100/api/ws-heartbeat
- dashboard-ui deployment에 ConfigMap 볼륨 마운트 추가

변경사항:
- k8s-manifests/base/dashboard-ui-nginx-config.yaml (신규)
  * nginx 리버스 프록시 설정 포함
  * Kustomize namePrefix(prod-)를 고려한 서비스 이름 사용
- k8s-manifests/base/dashboard-ui-deployment.yaml
  * nginx-config ConfigMap을 /etc/nginx/conf.d/default.conf에 마운트
- k8s-manifests/base/kustomization.yaml
  * dashboard-ui-nginx-config.yaml 리소스 추가

테스트 결과:
- Dashboard pods 정상 실행 (2/2 Running)
- /stats API 정상 응답 확인
- 모든 서비스 상태 조회 가능 (api-gateway, auth, blog, cache, database, load-balancer, user-service)

Related Issue: Dashboard backend communication error

--- a/k8s-manifests/base/kustomization.yaml
+++ b/k8s-manifests/base/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - auth-service-service.yaml
 - dashboard-ui-deployment.yaml
 - dashboard-ui-service.yaml
+- dashboard-ui-nginx-config.yaml
 - load-balancer-deployment.yaml
 - load-balancer-service.yaml
 - redis-deployment.yaml
