--- a/k8s-manifests/base/dashboard-ui-deployment.yaml
+++ b/k8s-manifests/base/dashboard-ui-deployment.yaml
@@ -33,6 +33,10 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "100m"
+        volumeMounts:
+        - name: nginx-config
+          mountPath: /etc/nginx/conf.d/default.conf
+          subPath: default.conf
         livenessProbe:
           httpGet:
             path: /
@@ -45,3 +49,7 @@ spec:
             port: http
           initialDelaySeconds: 5
           periodSeconds: 5
+      volumes:
+      - name: nginx-config
+        configMap:
+          name: dashboard-ui-nginx-config
