fix: blog 및 API 엔드포인트 라우팅을 위한 nginx 프록시 추가
문제:
- 대시보드(포트 31194)에서 blog 엔드포인트 접근 시 dashboard로 다시 돌아옴
- /api/* 경로가 load-balancer를 거치지 않고 api-gateway로 직접 접근

원인:
- nginx 설정에 /blog, /blog/ 프록시 설정 누락
- /api/* 경로가 api-gateway로 직접 프록시되어 load-balancer의 통계 수집 누락

해결:
- /blog, /blog/ 경로를 load-balancer로 프록시하도록 추가
- /api/* 경로를 load-balancer로 변경 (load-balancer가 api-gateway로 프록시)
- 모든 엔드포인트가 load-balancer를 거치도록 통일

변경사항:
- k8s-manifests/base/dashboard-ui-nginx-config.yaml
  * location /blog 추가
  * location /blog/ 추가
  * location /api/ 경로를 load-balancer로 변경

테스트 결과:
- /blog 접근 시 blog 서비스 HTML 정상 응답
- /api/* 요청이 load-balancer 통계에 반영됨
- Dashboard pods 정상 실행 (2/2 Running)

Related Issue: Blog endpoint routing to dashboard instead of blog service

--- a/k8s-manifests/base/dashboard-ui-nginx-config.yaml
+++ b/k8s-manifests/base/dashboard-ui-nginx-config.yaml
@@ -31,9 +31,34 @@ data:
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # API Gateway 프록시 (선택적)
+        # Blog Service 프록시 (load-balancer를 통해)
+        location /blog {
+            proxy_pass http://prod-load-balancer-service:7100/blog;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /blog/ {
+            proxy_pass http://prod-load-balancer-service:7100/blog/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # API Gateway 프록시 (load-balancer를 통해)
         location /api/ {
-            proxy_pass http://prod-api-gateway-service:8000/api/;
+            proxy_pass http://prod-load-balancer-service:7100/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
