--- a/k8s-manifests/base/user-service-deployment.yaml
+++ b/k8s-manifests/base/user-service-deployment.yaml
@@ -6,9 +6,7 @@ metadata:
     app: user-service
 spec:
   replicas: 2
-  selector:
-    matchLabels:
-      app: user-service
+  # selector 필드 제거 - 필수 필드이므로 오류 발생
   template:
     metadata:
       labels:
