chore: .gitignore에 AI 설정 파일 제외 규칙 추가
프로젝트의 AI 프롬프트 및 설정 파일을 버전 관리에서 제외합니다.

## 추가된 항목
- CLAUDE.MD / CLAUDE.md
- .claude/ 폴더
- .cursor/ 폴더

이 파일들은 개발 환경별로 다를 수 있으며 민감한 정보를 포함할 수 있어
Git 추적에서 제외합니다.

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,9 @@ vendor/
 kubeconfig
 *.kubeconfig
 *-kubeconfig.yaml
+
+# AI prompts and configurations (private)
+CLAUDE.MD
+CLAUDE.md
+.claude/
+.cursor/
