feat: Istio 서비스 메시 설치 및 사이드카 리소스 최적화
- Istio 1.20.1 설치 (demo profile)
- titanium-prod 네임스페이스에 자동 사이드카 주입 활성화
- 모든 애플리케이션 Pod에 Envoy 사이드카 주입 완료
- 사이드카 리소스 제한 최적화 (CPU: 2000m → 200m)
- Istio Gateway 및 VirtualService 생성
- 모든 proxy가 istiod와 동기화 완료

Resolves #23

--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -38,6 +38,23 @@ patches:
       kind: Deployment
       name: blog-service-deployment
 
+  # Add Istio sidecar resource limits to all Deployments
+  - patch: |-
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: not-used
+      spec:
+        template:
+          metadata:
+            annotations:
+              sidecar.istio.io/proxyCPU: "50m"
+              sidecar.istio.io/proxyCPULimit: "200m"
+              sidecar.istio.io/proxyMemory: "64Mi"
+              sidecar.istio.io/proxyMemoryLimit: "256Mi"
+    target:
+      kind: Deployment
+
 # ConfigMap generator for production-specific config
 configMapGenerator:
   - name: app-config
