--- a/k8s-manifests/overlays/solid-cloud/istio/gateway.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/gateway.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: load-balancer-vs
+  name: titanium-vs
   namespace: titanium-prod
 spec:
   hosts:
@@ -25,11 +25,78 @@ spec:
   gateways:
   - titanium-gateway
   http:
+  # Blog routes
   - match:
     - uri:
-        prefix: /
+        prefix: /blog/
+    route:
+    - destination:
+        host: prod-blog-service
+        port:
+          number: 8005
+  # User service routes (direct routing)
+  - match:
+    - uri:
+        prefix: /api/users
+    route:
+    - destination:
+        host: prod-user-service
+        port:
+          number: 8001
+    rewrite:
+      uri: /users
+  # Auth service routes (direct routing)
+  - match:
+    - uri:
+        prefix: /api/auth
+    route:
+    - destination:
+        host: prod-auth-service
+        port:
+          number: 8002
+    rewrite:
+      uri: /
+  # API Gateway routes (fallback)
+  - match:
+    - uri:
+        prefix: /api/
+    route:
+    - destination:
+        host: prod-api-gateway-service
+        port:
+          number: 8000
+  # Dashboard routes
+  - match:
+    - uri:
+        prefix: /dashboard/
+    route:
+    - destination:
+        host: prod-dashboard-ui-service
+        port:
+          number: 80
+  # Load Balancer stats/health
+  - match:
+    - uri:
+        prefix: /lb-health
     route:
     - destination:
         host: prod-load-balancer-service
         port:
           number: 7100
+  - match:
+    - uri:
+        prefix: /stats
+    route:
+    - destination:
+        host: prod-load-balancer-service
+        port:
+          number: 7100
+  # Default route to dashboard
+  - match:
+    - uri:
+        prefix: /
+    route:
+    - destination:
+        host: prod-dashboard-ui-service
+        port:
+          number: 80
