fix: /blog 경로 라우팅 수정 (trailing slash 문제 해결)
문제:
- /blog (trailing slash 없음) 접속 시 503 에러 발생
- /blog 요청이 Dashboard UI로 잘못 라우팅됨
- upstream connect error 발생

원인:
- VirtualService에서 prefix: /blog/ 로 설정되어 있음
- Istio는 /blog/ 로 시작하는 경로만 매칭
- /blog 는 매칭되지 않아 default route (Dashboard)로 라우팅됨

해결:
- prefix를 /blog 로 변경
- /blog, /blog/, /blog/* 모두 Blog 서비스로 라우팅
- Blog 서비스가 /blog 를 /blog/ 로 자동 리다이렉트 (HTTP 307)

테스트 결과:
- ✅ /blog → 307 리다이렉트 → /blog/ (정상)
- ✅ /blog/ → 200 OK (정상)
- ✅ /blog/api/posts → 200 OK (정상)

로그 확인:
- 수정 전: "GET /blog" → 503 → Dashboard UI ❌
- 수정 후: "GET /blog" → 307 → Blog Service ✅

Closes #27

--- a/k8s-manifests/overlays/solid-cloud/istio/gateway.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/gateway.yaml
@@ -28,7 +28,7 @@ spec:
   # Blog routes
   - match:
     - uri:
-        prefix: /blog/
+        prefix: /blog
     route:
     - destination:
         host: prod-blog-service
