fix: PostgreSQL 및 Redis mTLS 예외 처리로 데이터베이스 연결 문제 해결
문제:
- User Service에서 PostgreSQL 연결 실패
- mTLS STRICT 모드가 TCP 기반 데이터베이스에 적용되어 연결 불가
- 대시보드에서 "database offline" 오류 발생

해결:
- PostgreSQL과 Redis에 대한 PeerAuthentication 추가 (mode: DISABLE)
- 데이터베이스 서비스는 mTLS에서 제외
- HTTP 기반 마이크로서비스만 mTLS STRICT 유지

결과:
- User Service와 Database 연결 정상화
- 모든 서비스 상태 "healthy"로 복구
- 대시보드 정상 작동

--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -11,6 +11,7 @@ namePrefix: prod-
 resources:
   - ../../base
   - namespace.yaml
+  - istio/peer-authentication-databases.yaml
 
 # Patches for Solid Cloud environment
 patches:
