fix: 블로그 API 라우팅 문제 해결
문제:
- 블로그 앱의 로그인/회원가입 시 "서버와 통신할 수 없습니다" 오류
- /api/login, /api/register, /api/posts 경로가 올바르게 라우팅되지 않음
- 브라우저에서 블로그 접속 시 API 호출 실패

원인:
- VirtualService에 블로그 앱이 사용하는 API 경로가 정의되지 않음
- /api/login, /api/register → API Gateway로 라우팅되어 404 발생
- /api/posts → blog-service가 아닌 다른 서비스로 라우팅됨

해결:
- /api/login → auth-service의 /login으로 라우팅 추가
- /api/register → auth-service의 /register로 라우팅 추가
- /api/posts → blog-service로 라우팅 추가
- VirtualService 라우팅 순서 최적화 (구체적인 경로 우선)

결과:
- 블로그 로그인/회원가입 정상 작동
- 포스트 목록 API 정상 응답
- 모든 블로그 기능 사용 가능

--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ../../base
   - namespace.yaml
   - istio/peer-authentication-databases.yaml
+  - istio/virtualservice.yaml
 
 # Patches for Solid Cloud environment
 patches:
