refactor: Dashboard UI와 Load Balancer 제거
Dashboard UI와 Load Balancer 컴포넌트를 완전히 제거하여 시스템 아키텍처를 단순화했습니다.

변경 사항:
- 클러스터에서 Dashboard UI 및 Load Balancer 리소스 삭제
- Base 매니페스트에서 관련 파일 제거 (dashboard-ui-*, load-balancer-*)
- VirtualService에서 Dashboard 및 Load Balancer 라우팅 규칙 제거
- 기본 경로 (/) 를 Dashboard에서 Blog Service로 변경
- Kustomization 파일에서 Dashboard/Load Balancer 관련 패치 제거
- ConfigMap에서 DASHBOARD_UI_URL 및 LOAD_BALANCER_URL 제거

이제 모든 메트릭과 모니터링은 Prometheus, Grafana, Kiali를 통해 제공됩니다.

--- a/k8s-manifests/overlays/solid-cloud/istio/virtualservice.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/virtualservice.yaml
@@ -86,42 +86,12 @@ spec:
             port:
               number: 8000
 
-    # Dashboard UI
-    - match:
-        - uri:
-            prefix: /dashboard/
-      route:
-        - destination:
-            host: prod-dashboard-ui-service
-            port:
-              number: 80
-
-    # Load Balancer health check
-    - match:
-        - uri:
-            prefix: /lb-health
-      route:
-        - destination:
-            host: prod-load-balancer-service
-            port:
-              number: 7100
-
-    # Load Balancer stats
-    - match:
-        - uri:
-            prefix: /stats
-      route:
-        - destination:
-            host: prod-load-balancer-service
-            port:
-              number: 7100
-
-    # Default route (Dashboard UI)
+    # Default route (Blog Service)
     - match:
         - uri:
             prefix: /
       route:
         - destination:
-            host: prod-dashboard-ui-service
+            host: prod-blog-service
             port:
-              number: 80
+              number: 8005
