fix: CI build-summary가 서비스 변경 없을 때 실패하는 문제 수정
변경 사항:
- build-summary job이 build-and-scan이 skipped일 때도 성공으로 처리
- 워크플로우 파일이나 문서만 변경된 경우 빌드 없이 CI 성공

이제 .github/workflows/ci.yml이나 docs 변경만으로도 CI가 정상 완료됩니다.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,6 +189,8 @@ jobs:
         run: |
           if [ "${{ needs.build-and-scan.result }}" == "success" ]; then
             echo "✅ All builds completed successfully"
+          elif [ "${{ needs.build-and-scan.result }}" == "skipped" ]; then
+            echo "⏭️ No service changes detected, build skipped"
           else
             echo "❌ Some builds failed"
             exit 1
