fix: Istio 매니페스트 정리 및 Git 동기화
클러스터에서 수정한 Istio 설정을 Git 매니페스트에 반영했습니다.

변경 사항:
1. destination-rules.yaml 정리
   - 중복된 서비스별 DestinationRule 제거 (api-gateway, auth, blog, user)
   - 삭제된 서비스 DestinationRule 제거 (load-balancer, dashboard-ui)
   - Redis용 mTLS DISABLE DestinationRule 추가
   - PostgreSQL mTLS DISABLE DestinationRule 추가
   - 최종: default-mtls, postgresql-disable, redis-disable 3개만 유지

2. rate-limit.yaml 삭제
   - 삭제된 load-balancer 서비스를 대상으로 하는 EnvoyFilter
   - workloadSelector에서 존재하지 않는 app=load-balancer 참조

3. kustomization.yaml 업데이트
   - istio/destination-rules.yaml 리소스 추가
   - 삭제된 이미지 제거 (load-balancer, dashboard-ui)

이제 Kiali에서 모든 Istio 설정 에러와 경고가 해결되었습니다.

--- a/k8s-manifests/overlays/solid-cloud/istio/destination-rules.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/destination-rules.yaml
@@ -12,76 +12,21 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
-  name: api-gateway
+  name: postgresql-service-disable-mtls
   namespace: titanium-prod
 spec:
-  host: prod-api-gateway-service
+  host: postgresql-service
   trafficPolicy:
     tls:
-      mode: ISTIO_MUTUAL
+      mode: DISABLE
 ---
 apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
-  name: auth-service
-  namespace: titanium-prod
-spec:
-  host: prod-auth-service
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
----
-apiVersion: networking.istio.io/v1beta1
-kind: DestinationRule
-metadata:
-  name: blog-service
-  namespace: titanium-prod
-spec:
-  host: prod-blog-service
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
----
-apiVersion: networking.istio.io/v1beta1
-kind: DestinationRule
-metadata:
-  name: user-service
-  namespace: titanium-prod
-spec:
-  host: prod-user-service
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
----
-apiVersion: networking.istio.io/v1beta1
-kind: DestinationRule
-metadata:
-  name: load-balancer
-  namespace: titanium-prod
-spec:
-  host: prod-load-balancer-service
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
----
-apiVersion: networking.istio.io/v1beta1
-kind: DestinationRule
-metadata:
-  name: dashboard-ui
-  namespace: titanium-prod
-spec:
-  host: prod-dashboard-ui-service
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
----
-apiVersion: networking.istio.io/v1beta1
-kind: DestinationRule
-metadata:
-  name: redis
+  name: redis-disable-mtls
   namespace: titanium-prod
 spec:
   host: prod-redis-service
   trafficPolicy:
     tls:
-      mode: ISTIO_MUTUAL
+      mode: DISABLE
