fix: PeerAuthentication GitOps 설정 추가하여 Kiali 경고 해소

--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -11,6 +11,7 @@ namePrefix: prod-
 resources:
   - ../../base
   - namespace.yaml
+  - istio/peer-authentication.yaml
   - istio/peer-authentication-databases.yaml
   - istio/virtualservice.yaml
   - istio/destination-rules.yaml
