security: 보안 취약점 해결 및 문서 정확성 개선
- kustomization.yaml에서 하드코딩된 Secret 제거
- Secret 관리 가이드 문서 추가 (docs/SECRET_MANAGEMENT.md)
- README.md의 Terraform 설명을 실제 구현에 맞게 수정
- 보안 주의사항 섹션 추가

변경 사항:
1. 보안: Git에 노출된 POSTGRES_PASSWORD, JWT_SECRET_KEY 제거
2. 문서: 개발/프로덕션 환경별 Secret 관리 방법 가이드
3. 정확성: Terraform이 클러스터 내 리소스만 관리함을 명시
4. CI/CD: 무한 루프 방지 메커니즘 검증 완료 (paths 필터링)

--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -70,16 +70,11 @@ configMapGenerator:
       - APP_VERSION=2.0.0
       - CORS_ALLOWED_ORIGINS=*
 
-# Secret generator (will be replaced by actual secrets)
-# Note: In production, manage secrets separately or use external secret managers
-secretGenerator:
-  - name: app-secrets
-    behavior: merge
-    literals:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=CHANGE_THIS_SECURE_PASSWORD
-      - JWT_SECRET_KEY=CHANGE_THIS_JWT_SECRET
-      - INTERNAL_API_SECRET=EXNOz8PzwtGzCFUFtaSR/MAKcijj39DBTImiaMbi3xA=
+# Secret management
+# SECURITY: Secrets are managed separately and NOT committed to Git
+# For local development: Create secrets manually using kubectl
+# For production: Use External Secrets Operator or cloud-native secret management
+# Reference: docs/SECRET_MANAGEMENT.md
 
 # Common labels for all resources
 labels:
