--- a/k8s-manifests/overlays/solid-cloud/istio/virtualservice.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/virtualservice.yaml
@@ -42,6 +42,29 @@ spec:
             port:
               number: 8002
 
+    # Blog Auth routes (must come before /blog prefix)
+    - match:
+        - uri:
+            exact: /blog/api/login
+      rewrite:
+        uri: /login
+      route:
+        - destination:
+            host: prod-auth-service
+            port:
+              number: 8002
+
+    - match:
+        - uri:
+            exact: /blog/api/register
+      rewrite:
+        uri: /register
+      route:
+        - destination:
+            host: prod-auth-service
+            port:
+              number: 8002
+
     # Blog static files and pages
     - match:
         - uri:
