fix: /blog/api/ 경로를 api-gateway로 라우팅하도록 VirtualService 수정
Istio VirtualService의 라우팅 순서 문제로 /blog/api/ 요청이
blog-service로 잘못 라우팅되는 문제를 해결합니다.

변경사항:
- /blog/api/ prefix 규칙을 /blog prefix보다 먼저 매칭되도록 추가
- api-gateway-service(8000)로 라우팅하여 인증 API 처리
- Istio의 First Match Wins 원칙에 따라 순서 조정

관련 이슈: POST /blog/api/login 요청이 405 Method Not Allowed 반환

--- a/k8s-manifests/overlays/solid-cloud/istio/virtualservice.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/virtualservice.yaml
@@ -19,6 +19,16 @@ spec:
             port:
               number: 8005
 
+    # Blog Auth/API routes (Must come before /blog prefix)
+    - match:
+        - uri:
+            prefix: /blog/api/
+      route:
+        - destination:
+            host: prod-api-gateway-service
+            port:
+              number: 8000
+
     # Blog static files and pages
     - match:
         - uri:
