--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -92,7 +92,7 @@ images:
   - name: dongju101/auth-service
     newTag: main-19bd713
   - name: dongju101/api-gateway
-    newTag: main-94d2791
+    newTag: bugfix-812a298
 
 
 # Resource modifications
