--- a/k8s-manifests/overlays/solid-cloud/load-generator.yaml
+++ b/k8s-manifests/overlays/solid-cloud/load-generator.yaml
@@ -7,7 +7,7 @@ metadata:
     app: load-generator
     environment: demo
 spec:
-  replicas: 1
+  replicas: 5
   selector:
     matchLabels:
       app: load-generator
@@ -16,6 +16,8 @@ spec:
       labels:
         app: load-generator
         environment: demo
+        app.kubernetes.io/version: v1.0.0
+        version: v1.0.0
     spec:
       containers:
       - name: load-generator
@@ -23,26 +25,39 @@ spec:
         command: ["/bin/sh", "-c"]
         args:
         - |
-          echo "Load Generator started - generating traffic to blog service"
-          echo "Target: istio-ingressgateway.istio-system.svc.cluster.local/blog/"
-          echo "Interval: 10 seconds"
+          echo "Load Generator started - generating realistic traffic pattern"
+          echo "Target: istio-ingressgateway.istio-system.svc.cluster.local"
+          echo "Parallel requests: 3 endpoints (removed /api/register)"
+          echo "Interval: 1 second"
           echo "---"
 
           while true; do
-            timestamp=$(date '+%Y-%m-%d %H:%M:%S')
+            timestamp=$(date '+%s')
 
-            # Send request through Istio Ingress Gateway
-            response=$(curl -s -o /dev/null -w "%{http_code}" \
-              http://istio-ingressgateway.istio-system.svc.cluster.local/blog/ \
-              2>&1)
+            # Send 3 requests in parallel (removed /api/register to eliminate 4xx errors)
+            (
+              response=$(curl -s -o /dev/null -w "%{http_code}" \
+                http://istio-ingressgateway.istio-system.svc.cluster.local/blog/ 2>&1)
+              echo "[$(date '+%Y-%m-%d %H:%M:%S')] /blog/ -> HTTP $response"
+            ) &
 
-            if [ "$response" = "200" ] || [ "$response" = "307" ]; then
-              echo "[$timestamp] Request successful (HTTP $response)"
-            else
-              echo "[$timestamp] Request failed (HTTP $response)"
-            fi
+            (
+              response=$(curl -s -o /dev/null -w "%{http_code}" \
+                http://istio-ingressgateway.istio-system.svc.cluster.local/health 2>&1)
+              echo "[$(date '+%Y-%m-%d %H:%M:%S')] /health -> HTTP $response"
+            ) &
 
-            sleep 10
+            (
+              response=$(curl -s -o /dev/null -w "%{http_code}" \
+                http://istio-ingressgateway.istio-system.svc.cluster.local/blog/1 2>&1)
+              echo "[$(date '+%Y-%m-%d %H:%M:%S')] /blog/1 -> HTTP $response"
+            ) &
+
+            # Wait for all background jobs to complete
+            wait
+
+            # Sleep 1 second before next iteration
+            sleep 1
           done
         resources:
           requests:
