fix(k8s): Kiali 검증 이슈 수정 - version 라벨 및 문서 암호 업데이트
Kiali 대시보드에서 발견된 검증 이슈를 해결하기 위해 다음 변경사항을 적용합니다.

변경사항:
1. 4개 Deployment에 version: v1 라벨 추가
   - api-gateway-deployment.yaml
   - auth-service-deployment.yaml
   - blog-service-deployment.yaml
   - user-service-deployment.yaml

   이는 Kiali에서 발생하던 'Missing Version Label (KIA0201)' 경고를 해결하며,
   향후 Canary 배포와 버전별 트래픽 모니터링을 가능하게 합니다.

2. Grafana 로그인 정보 수정 (operations-guide.md)
   - 잘못된 암호: prom-operator
   - 올바른 암호: admin123
   - 2곳 수정 (line 82, 253)

영향:
- Pod 롤링 업데이트 발생 (RollingUpdate 전략으로 무중단 배포)
- 서비스 정상 작동 유지
- Kiali 검증 경고 해결

--- a/k8s-manifests/base/api-gateway-deployment.yaml
+++ b/k8s-manifests/base/api-gateway-deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: api-gateway
+        version: v1
     spec:
       containers:
       - name: api-gateway-container
