--- a/k8s-manifests/base/auth-service-deployment.yaml
+++ b/k8s-manifests/base/auth-service-deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: auth-service
+        version: v1
     spec:
       containers:
       - name: auth-service-container
