--- a/k8s-manifests/base/user-service-deployment.yaml
+++ b/k8s-manifests/base/user-service-deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: user-service
+        version: v1
     spec:
       containers:
       - name: user-service-container
