--- a/k8s-manifests/base/redis-deployment.yaml
+++ b/k8s-manifests/base/redis-deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: redis
+        version: v1
     spec:
       containers:
       - name: redis-container
