--- a/k8s-manifests/overlays/solid-cloud/istio/gateway.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/gateway.yaml
@@ -65,15 +65,6 @@ spec:
         host: prod-api-gateway-service
         port:
           number: 8000
-  # Dashboard routes
-  - match:
-    - uri:
-        prefix: /dashboard/
-    route:
-    - destination:
-        host: prod-dashboard-ui-service
-        port:
-          number: 80
   # Load Balancer stats/health
   - match:
     - uri:
@@ -91,12 +82,12 @@ spec:
         host: prod-load-balancer-service
         port:
           number: 7100
-  # Default route to dashboard
+  # Default route to blog
   - match:
     - uri:
         prefix: /
     route:
     - destination:
-        host: prod-dashboard-ui-service
+        host: prod-blog-service
         port:
-          number: 80
+          number: 8005
