docs: 문서 검증 결과 반영 및 모니터링 대시보드 스크린샷 추가
1. 문서 검증 결과 반영
   - architecture.md: namespace default → titanium-prod 수정
   - architecture.md: 경로 k8s/ → k8s-manifests/ 수정
   - architecture.md: load-generator 컴포넌트 문서화 추가
   - implementation-summary.md: Pod 개수 14개 → 12개 수정 및 상세 내역 추가
   - implementation-summary.md: Loki 3.5.7, Promtail 3.5.1 버전 정보 추가

2. 모니터링 대시보드 스크린샷 추가
   - Grafana Golden Signals 대시보드
   - Prometheus 메트릭 조회 화면
   - Kiali 서비스 메시 그래프
   - Loki 로그 조회 화면 (Grafana Explore)

3. 기타 변경사항
   - 기존 스크린샷 디렉토리 정리 (docs/05-operations → docs/04-operations)
   - .gitignore에 .claude 디렉토리 추가

--- a/k8s-manifests/monitoring/servicemonitor-api-gateway.yaml
+++ b/k8s-manifests/monitoring/servicemonitor-api-gateway.yaml
@@ -2,11 +2,14 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: api-gateway
-  namespace: titanium-prod
+  namespace: monitoring
   labels:
     app: api-gateway
     release: prometheus
 spec:
+  namespaceSelector:
+    matchNames:
+    - titanium-prod
   selector:
     matchLabels:
       app: api-gateway
