docs: 문서 포맷 개선 및 k6 부하 테스트 통합
- 모든 문서에서 이모지 제거 및 마크다운 포맷으로 대체
- k6 부하 테스트 스크립트 및 문서 추가
- CHANGELOG.md 생성하여 변경 이력 추적
- errors threshold 경고 해결 (커스텀 메트릭 제거)
- 테스트 범위 및 목적 명시

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,8 @@ kubeconfig
 *.kubeconfig
 *-kubeconfig.yaml
 /.claude/
+
+# k6 performance test results
+tests/performance/*.json
+tests/performance/results.json
+tests/performance/quick-results.json
