--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -18,6 +18,12 @@ resources:
 
 # Patches for Solid Cloud environment
 patches:
+  # PostgreSQL credentials secret patch
+  - path: secret-patch.yaml
+    target:
+      kind: Secret
+      name: app-secrets
+
   # Remove SQLite PVC from user-service deployment
   - path: patches/user-service-deployment-patch.yaml
     target:
