--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -11,10 +11,11 @@ namePrefix: prod-
 resources:
   - ../../base
   - namespace.yaml
-  - istio/peer-authentication.yaml
-  - istio/peer-authentication-databases.yaml
-  - istio/virtualservice.yaml
-  - istio/destination-rules.yaml
+  # Istio resources disabled - Istio not installed on cluster
+  # - istio/peer-authentication.yaml
+  # - istio/peer-authentication-databases.yaml
+  # - istio/virtualservice.yaml
+  # - istio/destination-rules.yaml
 
 # Patches for Solid Cloud environment
 patches:
