--- a/k8s-manifests/base/secret.yaml
+++ b/k8s-manifests/base/secret.yaml
@@ -7,12 +7,18 @@ metadata:
 type: Opaque
 data:
   # Base64 인코딩된 값들 (echo -n "값" | base64로 생성)
-  
+
+  # PostgreSQL 자격 증명 (Terraform에서 실제 값 관리)
+  # "postgres" 인코딩
+  POSTGRES_USER: cG9zdGdyZXM=
+  # "placeholder" 인코딩 (Terraform에서 덮어씀)
+  POSTGRES_PASSWORD: cGxhY2Vob2xkZXI=
+
   # "api-secret-key" 인코딩
   INTERNAL_API_SECRET: YXBpLXNlY3JldC1rZXk=
-  
-  # "jwt-signing-key" 인코딩  
+
+  # "jwt-signing-key" 인코딩
   JWT_SECRET_KEY: and0LXNpZ25pbmcta2V5
-  
+
   # "redis-password" 인코딩
   REDIS_PASSWORD: cmVkaXMtcGFzc3dvcmQ=
