--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -19,11 +19,7 @@ resources:
 
 # Patches for Solid Cloud environment
 patches:
-  # PostgreSQL credentials secret patch
-  - path: secret-patch.yaml
-    target:
-      kind: Secret
-      name: app-secrets
+  # Secret은 Terraform kubernetes module에서 관리
 
   # Remove SQLite PVC from user-service deployment
   - path: patches/user-service-deployment-patch.yaml
