feat: Istio Service Mesh 활성화
Istio resources 활성화:
- Gateway (Ingress traffic routing)
- VirtualService (Service routing rules)
- PeerAuthentication (mTLS STRICT mode)
- DestinationRules (Circuit breaker, Load balancing)

Service Mesh 학습 목적으로 Istio 도입
- Kiali 대시보드를 통한 Service Graph 시각화
- mTLS를 통한 서비스 간 암호화 통신
- 분산 추적 (Jaeger)

--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -11,11 +11,11 @@ namePrefix: prod-
 resources:
   - ../../base
   - namespace.yaml
-  # Istio resources disabled - Istio not installed on cluster
-  # - istio/peer-authentication.yaml
-  # - istio/peer-authentication-databases.yaml
-  # - istio/virtualservice.yaml
-  # - istio/destination-rules.yaml
+  # Istio resources enabled (gateway.yaml includes VirtualService)
+  - istio/gateway.yaml
+  - istio/peer-authentication.yaml
+  - istio/peer-authentication-databases.yaml
+  - istio/destination-rules.yaml
 
 # Patches for Solid Cloud environment
 patches:
