fix: PostgreSQL password를 실제 값으로 업데이트
user-service CrashLoopBackOff 문제 해결을 위해 app-secrets의
POSTGRES_PASSWORD를 placeholder에서 실제 PostgreSQL 비밀번호로 변경

--- a/k8s-manifests/base/secret.yaml
+++ b/k8s-manifests/base/secret.yaml
@@ -11,8 +11,8 @@ data:
   # PostgreSQL 자격 증명 (Terraform에서 실제 값 관리)
   # "postgres" 인코딩
   POSTGRES_USER: cG9zdGdyZXM=
-  # "placeholder" 인코딩 (Terraform에서 덮어씀)
-  POSTGRES_PASSWORD: cGxhY2Vob2xkZXI=
+  # "TempPassword123!" 인코딩
+  POSTGRES_PASSWORD: VGVtcFBhc3N3b3JkMTIzIQ==
 
   # "api-secret-key" 인코딩
   INTERNAL_API_SECRET: YXBpLXNlY3JldC1rZXk=
