fix: DestinationRule에 exportTo 추가하여 검증 에러 수정
와일드카드 DestinationRule에 exportTo: ["."]를 추가하여
네임스페이스 범위로 제한하고 Istio 검증 경고 해결

--- a/k8s-manifests/overlays/solid-cloud/istio/destination-rules.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/destination-rules.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: titanium-prod
 spec:
   host: "*.titanium-prod.svc.cluster.local"
+  exportTo:
+    - "."
   trafficPolicy:
     tls:
       mode: ISTIO_MUTUAL
