fix: 로그인 API 라우팅 수정
- Frontend: /api/auth/login -> /api/login으로 변경
- VirtualService: /api/login -> Auth Service /login으로 exact match 추가
- Istio rewrite 이중 슬래시 문제 해결

--- a/k8s-manifests/overlays/solid-cloud/istio/gateway.yaml
+++ b/k8s-manifests/overlays/solid-cloud/istio/gateway.yaml
@@ -45,6 +45,17 @@ spec:
           number: 8001
     rewrite:
       uri: /users
+  # Login route
+  - match:
+    - uri:
+        exact: /api/login
+    route:
+    - destination:
+        host: prod-auth-service
+        port:
+          number: 8002
+    rewrite:
+      uri: /login
   # Auth service routes (direct routing)
   - match:
     - uri:
