feat: Phase 1+2 보안 및 성능 개선 적용
- auth-service: Rate Limiting (5/min), CORS, ClientSession Singleton
- blog-service: CORS, AuthClient Singleton, Cache invalidation 최적화
- user-service: POSTGRES_PASSWORD 검증, Redis close

--- a/blog-service/Dockerfile
+++ b/blog-service/Dockerfile
@@ -1,13 +1,25 @@
-FROM python:3.11-slim
+# blog-service/Dockerfile - Multi-stage Build
+# Build stage
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# templates와 static 디렉터리를 이미지 안으로 복사
+# Runtime stage
+FROM python:3.11-slim
+
+WORKDIR /app
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Copy application files
 COPY templates ./templates
 COPY static ./static
+COPY app ./app
 COPY blog_service.py .
 
 EXPOSE 8005
