--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,18 +1,22 @@
-# 1. 베이스 이미지 설정
-FROM python:3.11-slim
+# auth-service/Dockerfile - Multi-stage Build
+# Build stage
+FROM python:3.11-slim AS builder
 
-# 2. 작업 디렉토리 설정
 WORKDIR /app
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
-# 3. 의존성 파일 복사 및 설치
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# 4. 프로젝트의 모든 소스 코드 복사
-COPY . .
+# Runtime stage
+FROM python:3.11-slim
 
-# 5. 서비스 포트 노출 (config.py에 정의된 8002 포트)
+WORKDIR /app
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
+COPY . .
 EXPOSE 8002
 
-# 6. 컨테이너 실행 시 시작될 메인 스크립트 지정 (Uvicorn 사용)
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8002"]
