--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,10 +1,22 @@
-# user-service/Dockerfile
-FROM python:3.11-slim
+# user-service/Dockerfile - Multi-stage Build
+# Build stage
+FROM python:3.11-slim AS builder
+
 WORKDIR /app
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Runtime stage
+FROM python:3.11-slim
+
+WORKDIR /app
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
 COPY . .
 EXPOSE 8001
 
-# CMD 명령어 형식을 다른 서비스와 통일합니다.
 CMD ["uvicorn", "user_service:app", "--host", "0.0.0.0", "--port", "8001"]
