--- a/user-service/requirements.txt
+++ b/user-service/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]
 werkzeug
 redis[hiredis]
 pydantic[email]
-psycopg2-binary==2.9.9
+asyncpg
+aiosqlite
 prometheus-client
 prometheus-fastapi-instrumentator
