fix: blog-service DATABASE_PATH 누락 및 auth-service INTERNAL_API_SECRET 주입
- blog-service/app/config.py: PostgreSQL 모드에서 DATABASE_PATH = None 추가
- auth-service: prod-app-secrets에서 INTERNAL_API_SECRET 주입 패치 추가

--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -33,6 +33,12 @@ patches:
       kind: Deployment
       name: blog-service-deployment
 
+  # Inject secrets into auth-service
+  - path: patches/auth-service-deployment-patch.yaml
+    target:
+      kind: Deployment
+      name: auth-service-deployment
+
   # Add Istio sidecar resource limits to all Deployments
   - patch: |-
       apiVersion: apps/v1
@@ -96,7 +102,6 @@ images:
     newTag: main-9820acf
   - name: dongju101/api-gateway
     newTag: main-3d2cb55
-
 
 # Resource modifications
 replicas:
