feat: Grafana Dashboard에 Rate Limiting 패널 추가
Phase 1+2 검증을 위한 Rate Limiting (429 Responses) 모니터링 패널 추가

변경사항:
- 5번째 패널 추가: Rate Limiting (429 Responses)
- 메트릭: http_requests_total{status="429"}
- Threshold: Green(0) / Yellow(1) / Red(10) req/s
- Grid Position: y=16 (기존 4개 패널 하단)

관련 문서: docs/03-implementation/improvements/monitoring-improvements.md

--- a/k8s-manifests/monitoring/dashboard-configmap.yaml
+++ b/k8s-manifests/monitoring/dashboard-configmap.yaml
@@ -345,6 +345,84 @@ data:
           ],
           "title": "💾 Saturation (Resource Usage)",
           "type": "timeseries"
+        },
+        {
+          "datasource": "Prometheus",
+          "fieldConfig": {
+            "defaults": {
+              "color": {
+                "mode": "palette-classic"
+              },
+              "custom": {
+                "axisLabel": "",
+                "axisPlacement": "auto",
+                "barAlignment": 0,
+                "drawStyle": "line",
+                "fillOpacity": 10,
+                "gradientMode": "none",
+                "hideFrom": {
+                  "tooltip": false,
+                  "viz": false,
+                  "legend": false
+                },
+                "lineInterpolation": "linear",
+                "lineWidth": 1,
+                "pointSize": 5,
+                "scaleDistribution": {
+                  "type": "linear"
+                },
+                "showPoints": "never",
+                "spanNulls": true
+              },
+              "mappings": [],
+              "thresholds": {
+                "mode": "absolute",
+                "steps": [
+                  {
+                    "color": "green",
+                    "value": null
+                  },
+                  {
+                    "color": "yellow",
+                    "value": 1
+                  },
+                  {
+                    "color": "red",
+                    "value": 10
+                  }
+                ]
+              },
+              "unit": "reqps"
+            },
+            "overrides": []
+          },
+          "gridPos": {
+            "h": 8,
+            "w": 24,
+            "x": 0,
+            "y": 16
+          },
+          "id": 5,
+          "options": {
+            "legend": {
+              "calcs": ["mean", "max"],
+              "displayMode": "table",
+              "placement": "bottom"
+            },
+            "tooltip": {
+              "mode": "single"
+            }
+          },
+          "pluginVersion": "8.0.0",
+          "targets": [
+            {
+              "expr": "sum(rate(http_requests_total{namespace=\"titanium-prod\", job=~\"$service\", status=\"429\"}[5m])) by (job)",
+              "refId": "A",
+              "legendFormat": "{{job}} - Rate Limited"
+            }
+          ],
+          "title": "Rate Limiting (429 Responses)",
+          "type": "timeseries"
         }
       ],
       "refresh": "10s",
