--- a/k8s-manifests/overlays/solid-cloud/kustomization.yaml
+++ b/k8s-manifests/overlays/solid-cloud/kustomization.yaml
@@ -77,7 +77,7 @@ configMapGenerator:
       - DEBUG_MODE=false
       - APP_NAME=titanium
       - APP_VERSION=2.0.0
-      - CORS_ALLOWED_ORIGINS=*
+      - ALLOWED_ORIGINS=https://titanium.example.com
 
 # Secret management
 # SECURITY: Secrets are managed separately and NOT committed to Git
