chore: 테스트 및 운영 스크립트 추가, 불필요 파일 정리
- tests/ 디렉토리 추가 (Unit, Integration, Infrastructure, E2E)
- 운영 스크립트 추가 (backup-solid-cloud.sh, restore-solid-cloud.sh)
- Terraform Secret 관리 문서 및 스크립트 추가
- Terraform Network 모듈 추가
- Golden Signals Istio Dashboard 추가
- .gitignore 업데이트 (debug_*.sh, register.json, tests/test-results.json)
- macOS 메타데이터 파일 삭제 (.DS_Store)

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,10 @@ kubeconfig
 tests/performance/*.json
 tests/performance/results.json
 tests/performance/quick-results.json
+
+# Debug scripts and temporary data
+debug_*.sh
+register.json
+
+# Test results (regenerated)
+tests/test-results.json
