feat: GCP overlay에 PostgreSQL StatefulSet 추가
변경 사항:
- postgresql-statefulset.yaml 생성 (PostgreSQL 16 Alpine)
- Headless Service로 StatefulSet 지원
- PVC를 통한 10Gi 영구 스토리지 설정
- Secret 기반 환경 변수 (bootstrap script가 생성한 postgresql-secret 사용)
- Resource limits 설정 (256Mi-512Mi memory, 100m-500m CPU)
- Liveness/Readiness probe 설정

기술 배경:
- CloudStack 배포에서는 Terraform kubernetes module로 PostgreSQL 관리
- GCP 배포에서는 k8s manifest로 직접 관리
- bootstrap script가 이미 postgresql-secret을 titanium-prod namespace에 생성

--- a/k8s-manifests/overlays/gcp/kustomization.yaml
+++ b/k8s-manifests/overlays/gcp/kustomization.yaml
@@ -11,6 +11,7 @@ namePrefix: prod-
 resources:
   - ../../base
   - namespace.yaml
+  - postgresql-statefulset.yaml
 
 # Patches for GCP environment
 patches:
