fix: user-service의 DB secret 참조를 postgresql-secret으로 수정
변경 사항:
- user-service-deployment-patch.yaml에서 secret 이름 수정
- app-secrets → postgresql-secret

문제:
- user-service가 존재하지 않는 app-secrets를 참조
- POSTGRES_USER, POSTGRES_PASSWORD 환경 변수 주입 실패
- DB 연결 시 password authentication failed 발생

해결:
- blog-service와 동일하게 postgresql-secret 사용
- bootstrap script가 생성한 secret과 이름 일치

--- a/k8s-manifests/overlays/gcp/patches/user-service-deployment-patch.yaml
+++ b/k8s-manifests/overlays/gcp/patches/user-service-deployment-patch.yaml
@@ -31,12 +31,12 @@ spec:
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
-              name: app-secrets
+              name: postgresql-secret
               key: POSTGRES_USER
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: app-secrets
+              name: postgresql-secret
               key: POSTGRES_PASSWORD
         # Remove volumeMounts for SQLite
         volumeMounts: []
