feat: 완전한 모니터링 Stack IaC 자동화 구현
Istio, Prometheus, Grafana, Kiali를 ArgoCD로 완전 자동 배포하도록 구성했습니다.

추가된 ArgoCD Applications:
- istio-base (v1.24.2): Istio CRD
- istiod (v1.24.2): Istio Control Plane
- istio-ingressgateway (v1.24.2): Ingress Gateway (NodePort 31080/31443)
- kube-prometheus-stack (v67.6.1): Prometheus + Grafana + Alertmanager
- kiali (v2.4.0): Service Mesh 시각화

kube-prometheus-stack 구성:
- Prometheus: 10Gi PVC, 7일 retention, NodePort 31090
- Grafana: admin/admin, NodePort 31300, Prometheus+Loki datasource
- Alertmanager: 기본 alert rules
- Node Exporter, Kube State Metrics 활성화

GCP overlay 변경:
- Istio 리소스 재활성화 (Gateway, VirtualService, DestinationRule, PeerAuthentication)
- Istio sidecar injection annotations 추가

멱등성 보장:
- 모든 Application에 automated sync policy
- ServerSideApply로 충돌 방지
- Retry policy로 일시적 오류 해결

접속 정보:
- ArgoCD: :30080
- Grafana: :31300 (admin/admin)
- Prometheus: :31090
- Kiali: :31200
- Istio Ingress: :31080

--- a/k8s-manifests/overlays/gcp/kustomization.yaml
+++ b/k8s-manifests/overlays/gcp/kustomization.yaml
@@ -12,6 +12,11 @@ resources:
   - ../../base
   - namespace.yaml
   - postgresql-statefulset.yaml
+  # Istio resources enabled (gateway.yaml includes VirtualService)
+  - istio/gateway.yaml
+  - istio/peer-authentication.yaml
+  - istio/peer-authentication-databases.yaml
+  - istio/destination-rules.yaml
 
 # Patches for GCP environment
 patches:
@@ -38,6 +43,23 @@ patches:
     target:
       kind: Service
       name: api-gateway-service
+
+  # Add Istio sidecar resource limits to all Deployments
+  - patch: |-
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: not-used
+      spec:
+        template:
+          metadata:
+            annotations:
+              sidecar.istio.io/proxyCPU: "50m"
+              sidecar.istio.io/proxyCPULimit: "200m"
+              sidecar.istio.io/proxyMemory: "64Mi"
+              sidecar.istio.io/proxyMemoryLimit: "256Mi"
+    target:
+      kind: Deployment
 
 # ConfigMap generator for production-specific config
 configMapGenerator:
